# echo.ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/plans/: echo-copilot-prd.md  stage1-intercept-plan.md  stage2-summarize-plan.md  stage3-tts-plan.md  stage4-alert-plan.md  stage5-voice-response-plan.md  voice-copilot-prd.md
Logs/: events.txt  narrations.txt  server.txt
docs/: setup-and-testing-guide.md  stage1-intercept-implementation.md  stage2-summarize-implementation.md  stage3-tts-implementation.md  stage4-alert-implementation.md  stage5-voice-response-implementation.md
echo/: __init__.py  __main__.py  cli.py  config.py
echo/events/: __init__.py  event_bus.py  types.py
echo/hooks/: on_event.sh
tests/: conftest.py  test_alert_manager.py  test_alert_tone.py  test_alert_tones.py  test_audio_player.py  test_elevenlabs_client.py  test_event_batcher.py  test_event_bus.py  test_event_types.py  test_hook_handler.py  test_hook_installer.py  test_inworld_client.py  test_livekit_publisher.py  test_llm_summarizer.py  test_microphone.py  test_narration_types.py  test_provider_factory.py  test_response_dispatcher.py  test_response_matcher.py  test_server.py  test_server_narrations.py  test_server_stt.py  test_server_tts.py  test_stage4_integration.py  test_stage5_integration.py  test_stt_client.py  test_stt_engine.py  test_stt_types.py  test_summarizer.py  test_template_engine.py  test_transcript_watcher.py  test_tts_config.py  test_tts_engine.py  test_tts_provider.py  test_tts_types.py
voice_copilot/: __init__.py  __main__.py  cli.py  config.py
(+46 files in other folders)
