[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-copilot"
version = "0.1.0"
description = "Real-time audio bridge between developers and AI coding agents"

requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "watchdog",
    "click",
    "sse-starlette",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
voice-copilot = "voice_copilot.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
