[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-copilot"
version = "0.1.0"
description = "Real-time audio bridge between developers and AI coding agents"

requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "watchdog",
    "click",
    "sse-starlette",
    "httpx",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "livekit>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
echo-copilot = "echo.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
